Enhance project setup: update .gitignore, add build scripts to package.json, and improve README for deployment and development instructions.

--- a/levels-editor.html
+++ b/levels-editor.html
@@ -23,8 +23,8 @@
     <link rel="apple-touch-icon" sizes="114x114" href="homescreen-114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="homescreen-144.png">
 
-    <link rel="stylesheet" href="dist/common.css">
-    <link rel="stylesheet" href="dist/levels-editor.css">
+    <link rel="stylesheet" href="dist/common.css"/>
+    <link rel="stylesheet" href="dist/levels-editor.css"/>
     <link rel="stylesheet" href="bower_components/fancyselect/fancySelect.css" type="text/css" media="screen" />
     <script src="js/_config_prod.js"></script>
     <script src="js/lib/require/require.js"></script>
